--- a/api-reference/core-testing-apis/assertions-reference.mdx
+++ b/api-reference/core-testing-apis/assertions-reference.mdx
@@ -1,372 +1,238 @@
 ---
 title: "Assertions Reference"
-description: "Concise overview and explanation of all core assertion macros (e.g., EXPECT_EQ, ASSERT_TRUE), their behaviors (fatal vs. non-fatal failures), and when to use each. Provides usage examples and maps assertions to test outcomes."
+description: "Comprehensive API details and behavioral contracts for the suite of built-in assertions (such as equality, inequality, exceptions, floating point, and user-defined assertions). Covers both fatal and non-fatal failures, and demonstrates usage with code examples."
 ---
 
 # Assertions Reference
 
-This documentation page provides a comprehensive guide to the core assertion macros provided by GoogleTest. Assertions are the fundamental building blocks to verify code behavior in tests. This page explains the differences between `EXPECT_` and `ASSERT_` macros, clarifies their usage patterns including failure severity, and offers detailed descriptions and examples for each assertion type.
+This reference provides a detailed overview of the assertion macros provided by GoogleTest for verifying the behavior of your code. Included are both fatal (`ASSERT_`) and non-fatal (`EXPECT_`) assertion variants, which allow you to enforce correctness without abruptly stopping your tests when failures occur.
 
-> To use these assertions, include `#include <gtest/gtest.h>` in your test source files.
+Assertions are the cornerstone of test verification, giving meaningful feedback when your code behaves unexpectedly.
 
 ---
 
-## Understanding Assertion Failures: Fatal vs Non-fatal
+## Key Concepts: Fatal vs Non-fatal Assertions
 
-GoogleTest assertions come in two flavors:
+- **`EXPECT_` Assertions:** Generate nonfatal failures, allowing the test function to continue running. Use these when you want to keep testing even if a condition fails.
+- **`ASSERT_` Assertions:** Generate fatal failures that abort the current function immediately. Use these when continuing the test is pointless after a failure.
 
-- **`EXPECT_` assertions:** Generate *non-fatal* failures; the test continues running after a failure.
-- **`ASSERT_` assertions:** Generate *fatal* failures; the current function exits immediately on failure.
-
-Use `EXPECT_` if you want your test to continue checking additional conditions, enabling multiple failures to be detected in one run. Use `ASSERT_` when it does not make sense to continue testing after a failure (for example, if further checking would lead to crashes or meaningless results).
-
-Every assertion macro supports streaming a custom failure message with the `<<` operator, enabling more insightful failure diagnostics.
-
-Example:
+You can append custom failure messages to any assertion using the streaming `<<` operator to improve test output clarity.
 
 ```cpp
-EXPECT_TRUE(my_condition) << "my_condition is false: " << some_value;
+EXPECT_TRUE(condition) << "Condition failed because X";
 ```
 
 ---
 
-## Explicit Success and Failure Assertions
+## Categories of Assertions
 
-Sometimes you want to explicitly indicate success or failure in a test, typically when control flow rather than a Boolean condition determines the test outcome.
+### 1. Explicit Success and Failure
 
-### SUCCEED()
-
-- Generates a test success.
-- This does **not** make the overall test pass unless no other assertions fail.
-- Currently produces no visible output but serves as documentation.
-
-```cpp
-SUCCEED();
-```
-
-### FAIL()
-
-- Generates a fatal failure that aborts the current function.
-- Only usable in `void`-returning functions.
-
-```cpp
-FAIL() << "Reached unexpected code path";
-```
-
-### ADD_FAILURE()
-
-- Generates a nonfatal failure, allowing the test to continue.
-
-```cpp
-ADD_FAILURE() << "Something went wrong";
-```
-
-### ADD_FAILURE_AT(file, line)
-
-- Generates a nonfatal failure at a specific file and line number.
-
-```cpp
-ADD_FAILURE_AT("foo.cc", 123) << "Failure at specific location";
-```
+- **`SUCCEED()`**: Indicates an explicit successful check (does not guarantee overall test success).
+- **`FAIL()`**: Marks a fatal failure unconditionally (function must return `void`).
+- **`ADD_FAILURE()`**: Inserts a nonfatal failure to mark unexpected code paths.
+- **`ADD_FAILURE_AT(file, line)`**: Adds a nonfatal failure at specified source location.
 
 ---
 
-## Assertions Using Matchers
+### 2. Generalized Assertion Using Matchers
 
-GoogleTest supports flexible assertions using [matchers](matchers.md) for validating values.
-
-### EXPECT_THAT(value, matcher) / ASSERT_THAT(value, matcher)
-
-- Assert that a value satisfies a matcher predicate.
-- Supports expressive matchers like `StartsWith()`, `MatchesRegex()`, `AllOf()`, etc.
+- **`EXPECT_THAT(value, matcher)`** / **`ASSERT_THAT(value, matcher)`**: Verify that `value` matches the provided GoogleMock-style matcher, enabling expressive and readable tests.
 
 Example:
 
 ```cpp
 EXPECT_THAT(str, StartsWith("Hello"));
-ASSERT_THAT(num, AllOf(Gt(5), Lt(10)));
-```
-
-Failure message example on mismatch:
-
-```
-Value of: str
-  Actual: "Hi there!"
-Expected: starts with "Hello"
+EXPECT_THAT(num, AllOf(Gt(5), Lt(10)));
 ```
 
 ---
 
-## Boolean Condition Assertions
+### 3. Boolean Condition Assertions
 
-Verify basic Boolean conditions.
+Verify Boolean conditions precisely.
 
-### EXPECT_TRUE(condition) / ASSERT_TRUE(condition)
+| Macro              | Description                       |
+| ------------------ | --------------------------------- |
+| `EXPECT_TRUE(cond)` | Checks if `cond` is true.         |
+| `EXPECT_FALSE(cond)`| Checks if `cond` is false.        |
+| `ASSERT_TRUE(cond)` | Fatal variant of `EXPECT_TRUE`.   |
+| `ASSERT_FALSE(cond)`| Fatal variant of `EXPECT_FALSE`.  |
 
-Verifies `condition` is `true`.
+---
+
+### 4. Binary Comparisons
+
+These verify relationships between two comparable values.
+
+| Macro          | Relation | Description                          | Notes                                          |
+| -------------- | -------- | ------------------------------------|------------------------------------------------|
+| `EXPECT_EQ(a,b)` | `==`    | Checks `a == b`.                   | For pointers, compares addresses; use `EXPECT_STREQ` for C-strings. |
+| `EXPECT_NE(a,b)` | `!=`    | Checks `a != b`.                   | For pointers, compares addresses; use `EXPECT_STRNE` for C-strings. |
+| `EXPECT_LT(a,b)` | `<`     | Checks `a < b`.                    |                                                |
+| `EXPECT_LE(a,b)` | `<=`    | Checks `a <= b`.                   |                                                |
+| `EXPECT_GT(a,b)` | `>`     | Checks `a > b`.                    |                                                |
+| `EXPECT_GE(a,b)` | `>=`    | Checks `a >= b`.                   |                                                |
+
+Also available with fatal variants as `ASSERT_*`.
+
+---
+
+### 5. String Comparisons (C-strings)
+
+Specialized for C-style strings (`const char*`, `wchar_t*`) to compare contents rather than pointer addresses.
+
+| Macro             | Description                                   |
+| ----------------- | ---------------------------------------------|
+| `EXPECT_STREQ(a,b)` | Checks C-strings `a` and `b` have equal content. |
+| `EXPECT_STRNE(a,b)` | Checks C-strings `a` and `b` have different content. |
+| `EXPECT_STRCASEEQ(a,b)` | Checks equality ignoring case.            |
+| `EXPECT_STRCASENE(a,b)` | Checks inequality ignoring case.          |
+
+---
+
+### 6. Floating-Point Comparisons
+
+Due to rounding issues, specialized assertions compare with tolerances.
+
+| Macro               | Description                                                            |
+| ------------------- | ---------------------------------------------------------------------- |
+| `EXPECT_FLOAT_EQ(a,b)` | Checks `float` a and b are approximately equal within 4 ULPs.          |
+| `EXPECT_DOUBLE_EQ(a,b)`| Checks `double` a and b are approximately equal within 4 ULPs.         |
+| `EXPECT_NEAR(a,b,abs_error)` | Checks that absolute difference between `a` and `b` is <= `abs_error`. |
+
+For example:
 
 ```cpp
-EXPECT_TRUE(is_ready) << "System should be ready";
-```
-
-### EXPECT_FALSE(condition) / ASSERT_FALSE(condition)
-
-Verifies `condition` is `false`.
-
-```cpp
-ASSERT_FALSE(has_error) << "Unexpected error state";
+EXPECT_NEAR(actual, expected, 0.001);
 ```
 
 ---
 
-## Binary Comparison Assertions
+### 7. Exception Assertions
 
-Compare two values with standard comparison operators.
+Verify that code throws specific exceptions or not.
 
-- Each of these comes in `EXPECT_` and `ASSERT_` variants.
-- Arguments are evaluated exactly once.
-- Works with built-in types, classes with overloaded operators, `std::string`, etc.
-
-### Equality and Inequality
-
-- `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)` -- Verifies `val1 == val2`.
-- `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)` -- Verifies `val1 != val2`.
-
-> Important: For pointers, equality is pointer equality.
-> To compare C strings by content, use string comparison assertions instead.
-
-### Ordering Operators
-
-- `EXPECT_LT(val1, val2)` / `ASSERT_LT(val1, val2)` -- Verifies `val1 < val2`.
-- `EXPECT_LE(val1, val2)` / `ASSERT_LE(val1, val2)` -- Verifies `val1 <= val2`.
-- `EXPECT_GT(val1, val2)` / `ASSERT_GT(val1, val2)` -- Verifies `val1 > val2`.
-- `EXPECT_GE(val1, val2)` / `ASSERT_GE(val1, val2)` -- Verifies `val1 >= val2`.
+| Macro                 | Description                                        |
+| --------------------- | ------------------------------------------------- |
+| `EXPECT_THROW(stmt, ExceptionType)` | Checks that `stmt` throws an exception of type `ExceptionType`. |
+| `EXPECT_ANY_THROW(stmt)` | Checks that `stmt` throws any exception.          |
+| `EXPECT_NO_THROW(stmt)`  | Checks that `stmt` throws no exceptions.           |
 
 Example:
 
 ```cpp
-EXPECT_EQ(result.size(), expected_size) << "Unexpected vector size";
-ASSERT_LT(value, max_value) << "Value exceeds maximum";
+EXPECT_THROW(MyFunc(), std::runtime_error);
 ```
 
 ---
 
-## C String Comparison Assertions
+### 8. Predicate Assertions
 
-Specialized assertions to compare C-style strings by contents rather than pointer identity. Accepts narrow and wide strings.
+Custom predicates for verifying complex logic with informative messages.
 
-- `EXPECT_STREQ(str1, str2)` / `ASSERT_STREQ(str1, str2)` -- Verifies strings are equal.
-- `EXPECT_STRNE(str1, str2)` / `ASSERT_STRNE(str1, str2)` -- Verifies strings differ.
-- `EXPECT_STRCASEEQ(str1, str2)` / `ASSERT_STRCASEEQ(str1, str2)` -- Case-insensitive equality.
-- `EXPECT_STRCASENE(str1, str2)` / `ASSERT_STRCASENE(str1, str2)` -- Case-insensitive inequality.
+- `EXPECT_PREDn(Predicate, val1, ..., valn)` and `ASSERT_PREDn` variants.
+- For predicates as predicate-formatters use `EXPECT_PRED_FORMATn` which receive expressions and evaluated values allowing precise failure descriptions.
 
 Example:
 
 ```cpp
-EXPECT_STREQ(cstr1, cstr2) << "Strings differ";
-ASSERT_STRCASEEQ(wide_str1, wide_str2) << "Wide strings differ (case ignored)";
-```
-
-Use `nullptr` comparisons as `EXPECT_EQ(ptr, nullptr)` or `EXPECT_NE(ptr, nullptr)`.
-
----
-
-## Floating-Point Comparison Assertions
-
-Due to inherent rounding errors, direct equality comparison for floating-point numbers is not reliable. GoogleTest provides specialized assertions that consider precision and tolerance.
-
-### EXPECT_FLOAT_EQ(val1, val2) / ASSERT_FLOAT_EQ(val1, val2)
-
-- Verifies two `float` values are approximately equal within 4 Units in the Last Place (ULPs).
-
-### EXPECT_DOUBLE_EQ(val1, val2) / ASSERT_DOUBLE_EQ(val1, val2)
-
-- Verifies two `double` values are approximately equal within 4 ULPs.
-
-### EXPECT_NEAR(val1, val2, abs_error) / ASSERT_NEAR(val1, val2, abs_error)
-
-- Verifies that the absolute difference between `val1` and `val2` does not exceed `abs_error`.
-
-Example:
-
-```cpp
-EXPECT_FLOAT_EQ(computed_float, expected_float);
-ASSERT_NEAR(computed_double, expected_double, 1e-5);
+bool MutuallyPrime(int a, int b) { /*...*/ }
+EXPECT_PRED2(MutuallyPrime, x, y);
 ```
 
 ---
 
-## Exception Assertions
+### 9. Windows HRESULT Assertions
 
-Use these assertions if your build environment supports exceptions to verify the throwing or non-throwing of exceptions.
+Specifically for COM HRESULT values.
 
-### EXPECT_THROW(statement, exception_type) / ASSERT_THROW(statement, exception_type)
-
-Asserts that `statement` throws an exception of type `exception_type`.
-
-### EXPECT_ANY_THROW(statement) / ASSERT_ANY_THROW(statement)
-
-Asserts that `statement` throws any type of exception.
-
-### EXPECT_NO_THROW(statement) / ASSERT_NO_THROW(statement)
-
-Asserts that `statement` does not throw any exception.
-
-Use these assertions with compound statements when necessary:
-
-```cpp
-EXPECT_NO_THROW({
-  int x = 5;
-  doSomething(x);
-});
-```
+| Macro                     | Description                                |
+| --------------------------| ------------------------------------------|
+| `EXPECT_HRESULT_SUCCEEDED(expr)` | Checks that `expr` yields success HRESULT. |
+| `EXPECT_HRESULT_FAILED(expr)`    | Checks that `expr` yields failure HRESULT. |
 
 ---
 
-## Predicate Assertions for Complex Conditions
+### 10. Death Assertions
 
-When simple Boolean conditions are not enough or debugging failure is difficult, predicate assertions offer expressive and informative ways to check arbitrary predicates.
+Verify that code causes process termination and error messages.
 
-### EXPECT_PRED* and ASSERT_PRED*
+| Macro                  | Description                                                                        |
+| ---------------------- | ---------------------------------------------------------------------------------- |
+| `EXPECT_DEATH(stmt, regex)` | Asserts `stmt` causes process to terminate and outputs stderr matching `regex`.    |
+| `EXPECT_DEATH_IF_SUPPORTED(stmt, regex)` | Like `EXPECT_DEATH`, but if unsupported, it's a no-op.                    |
+| `EXPECT_DEBUG_DEATH(stmt, regex)` | Executes death test only in debug mode.                                     |
+| `EXPECT_EXIT(stmt, predicate, regex)` | Verifies `stmt` process exit status matches predicate and output matches `regex`.
 
-- `EXPECT_PRED1(pred, val1)`, `EXPECT_PRED2(pred, val1, val2)`, ... up to 5 arguments.
-- Verifies that predicate `pred` returns `true` when passed the given arguments.
-
-Example:
-
-```cpp
-bool MutuallyPrime(int a, int b) { /* returns true if a and b have no common divisor except 1 */ }
-EXPECT_PRED2(MutuallyPrime, 3, 4);  // succeeds
-EXPECT_PRED2(MutuallyPrime, 4, 10); // fails
-```
-
-Failure message example:
-
-```
-MutuallyPrime(4, 10) is false, where
- 4 is 4
- 10 is 10
-```
-
-If the predicate is overloaded or templated, explicit casting can help disambiguate.
-
-### EXPECT_PRED_FORMAT* and ASSERT_PRED_FORMAT*
-
-- Use *predicate-formatters* that return a `testing::AssertionResult` with custom failure messages.
-- More flexible and produce clearer failure diagnostics than `EXPECT_PRED*` alone.
-
-Example predicate-formatter:
+Examples:
 
 ```cpp
-testing::AssertionResult AssertMutuallyPrime(
-    const char* expr1, const char* expr2, int m, int n) {
-  if (MutuallyPrime(m, n)) return testing::AssertionSuccess();
-  return testing::AssertionFailure() << expr1 << " and " << expr2
-      << " are not mutually prime: " << m << " and " << n;
-}
-```
-
-Example usage:
-
-```cpp
-EXPECT_PRED_FORMAT2(AssertMutuallyPrime, 4, 10);
-```
-
-Failure message:
-
-```
-4 and 10 are not mutually prime: 4 and 10
-```
-
----
-
-## Windows HRESULT Assertions
-
-On Windows, you can verify success or failure HRESULT values.
-
-### EXPECT_HRESULT_SUCCEEDED(expression) / ASSERT_HRESULT_SUCCEEDED(expression)
-
-- Verifies that `expression` returns a success HRESULT.
-
-### EXPECT_HRESULT_FAILED(expression) / ASSERT_HRESULT_FAILED(expression)
-
-- Verifies that `expression` returns a failure HRESULT.
-
-Example:
-
-```cpp
-ASSERT_HRESULT_SUCCEEDED(shell.CoCreateInstance(L"Shell.Application"));
-```
-
----
-
-## Death Assertions
-
-Verify that a statement causes the process to terminate with a specific exit status and/or output.
-
-These spawn a child process and execute the statement in it, allowing tests of abnormal termination.
-
-### EXPECT_DEATH(statement, matcher) / ASSERT_DEATH(statement, matcher)
-
-- Verifies the process terminated with a nonzero exit code and `stderr` output matching `matcher`.
-- `matcher` can be a matcher or a regex string (substring matching).
-
-### EXPECT_DEATH_IF_SUPPORTED(statement, matcher) / ASSERT_DEATH_IF_SUPPORTED(statement, matcher)
-
-- Runs like `EXPECT_DEATH` if death tests are supported; otherwise, does nothing.
-
-### EXPECT_DEBUG_DEATH(statement, matcher) / ASSERT_DEBUG_DEATH(statement, matcher)
-
-- In debug mode, functions like `EXPECT_DEATH`.
-- In release mode, just runs the statement normally.
-
-### EXPECT_EXIT(statement, predicate, matcher) / ASSERT_EXIT(statement, predicate, matcher)
-
-- Verifies process exit status satisfies `predicate` (e.g. exit code or signal) and `stderr` output matches `matcher`.
-
-Example:
-
-```cpp
+EXPECT_DEATH(DangerousFunction(), "Error on line .* of DangerousFunction");
 EXPECT_EXIT(NormalExit(), testing::ExitedWithCode(0), "Success");
 ```
 
 ---
 
-## Usage Tips & Best Practices
+## Practical Tips and Best Practices
 
-- Use `EXPECT_` macros to keep tests running after a failure, allowing comprehensive diagnostics.
-- Use `ASSERT_` macros when it is unsafe or meaningless to continue after failure.
-- Always provide custom failure messages where helpful.
-- Prefer specialized assertions over generic `EXPECT_TRUE` to get clearer failure output.
-- In complex checks, consider predicate or predicate-format assertions to improve clarity.
-- For death tests, remember the statement runs in a separate process; side effects are not observable in the parent.
-- When comparing floating-point values, use the specialized floating-point assertions to avoid false failures due to rounding.
-
----
-
-For further information, see the related documentation:
-
-- [GoogleTest Primer - Assertions](../primer.md#assertions)
-- [GoogleTest Advanced Topics - More Assertions](../advanced.md#more-assertions)
-- [Matchers Reference](matchers.md) for powerful value matching
-- [Death Tests](../advanced.md#death-tests)
+- Use `EXPECT_` assertions when you can continue the test even if the condition fails.
+- Use `ASSERT_` assertions when further test code depends on the outcome of the assertion.
+- Append descriptive failure messages using `<<` to improve debuggability.
+- When comparing floating points, prefer `EXPECT_NEAR` or `EXPECT_*_EQ` variants over `EXPECT_EQ`.
+- Prefer matchers (`EXPECT_THAT`) when asserting complex conditions for better output clarity.
+- Use explicit `EXPECT_DEATH` and related macros to validate fatal error conditions safely.
+- Use `EXPECT_PRED_FORMATn` for advanced predicates to provide rich failure diagnostics.
 
 ---
 
-## Summary Table of Assertion Macros
+## Example Usage
 
-| Category                 | Macro Examples                                 | Failure Type         | Verifies                                                 |
-|--------------------------|-----------------------------------------------|----------------------|----------------------------------------------------------|
-| Explicit Success & Failure | `SUCCEED()`, `FAIL()`, `ADD_FAILURE()`       | Success / Fatal / Nonfatal | Immediate test success/failure                             |
-| Boolean Conditions        | `EXPECT_TRUE()`, `ASSERT_FALSE()`             | Nonfatal / Fatal     | Boolean expression truthiness                              |
-| Binary Comparisons        | `EXPECT_EQ()`, `ASSERT_LT()`                   | Nonfatal / Fatal     | Equality / Ordering between two values                     |
-| String Comparisons        | `EXPECT_STREQ()`, `ASSERT_STRCASEEQ()`        | Nonfatal / Fatal     | C string equality (with or without case sensitivity)      |
-| Floating-Point Comparisons | `EXPECT_FLOAT_EQ()`, `ASSERT_NEAR()`          | Nonfatal / Fatal     | Floating-point approximate equality                        |
-| Exception Assertions      | `EXPECT_THROW()`, `ASSERT_NO_THROW()`          | Nonfatal / Fatal     | Exception throwing behavior                                |
-| Predicate Assertions      | `EXPECT_PRED2()`, `ASSERT_PRED_FORMAT3()`     | Nonfatal / Fatal     | Arbitrary predicates with detailed failure messages       |
-| HRESULT Assertions (Windows) | `EXPECT_HRESULT_SUCCEEDED()`                 | Nonfatal / Fatal     | Windows HRESULT success/failure                            |
-| Death Assertions          | `EXPECT_DEATH()`, `ASSERT_EXIT()`              | Nonfatal / Fatal     | Process termination and stderr output                      |
+```cpp
+#include <gtest/gtest.h>
+
+TEST(MathTest, CompareValues) {
+    int a = 5, b = 10;
+    EXPECT_LT(a, b) << "Expected a to be less than b";
+    EXPECT_EQ(a + b, 15);
+}
+
+TEST(StringTest, CompareCStrings) {
+    const char* str1 = "hello";
+    const char* str2 = "hello";
+    EXPECT_STREQ(str1, str2);
+}
+
+TEST(FloatingPointTest, ApproxComparison) {
+    double val = 0.1 + 0.2;
+    EXPECT_NEAR(val, 0.3, 1e-9);
+}
+
+TEST(ExceptionTest, ThrowsExpected) {
+    EXPECT_THROW(ThrowingFunction(), std::runtime_error);
+}
+
+TEST(PredicateTest, CustomCheck) {
+    auto IsPositive = [](int x) { return x > 0; };
+    EXPECT_PRED1(IsPositive, 10);
+}
+
+TEST(DeathTest, DeathOnNull) {
+    EXPECT_DEATH(FunctionThatCrashesOnNull(nullptr), "null pointer");
+}
+```
 
 ---
 
-For reference and examples, see the [`docs/reference/assertions.md`](https://github.com/google/googletest/blob/main/docs/reference/assertions.md) in GoogleTest source.
+For more information, explore the full [Assertions Reference](https://github.com/google/googletest/blob/main/docs/reference/assertions.md), and related guides on writing effective tests.
+
+---
+
+<Callout title="Note">
+This page focuses exclusively on GoogleTest assertions. For mocking assertions and expectations related to GoogleMock, see the [Mocking Reference](reference/mocking.md).
+</Callout>
+
+---
+
+<Source url="https://github.com/google/googletest" paths={[{"path": "docs/reference/assertions.md", "range": "0-485"}]} />
+
